results/print-ir/expected/failure/resolver/invalid_type_access.psy.out
Parsed OK
error: Member 'ROLL' does not exist in type 'Student'.
  --> tests/failure/resolver/invalid_type_access.psy:7:1
   |
  7| s1.ROLL = 1;
   | ^--- Here


Semantic analysis failed. Compilation stopped.
